--- a/src/components/CallToAction/CallToAction.module.css
+++ b/src/components/CallToAction/CallToAction.module.css
@@ -81,11 +81,13 @@
 
   .cta__cats {
     max-width: 280px !important;
+      margin-bottom: -170px;
   }
 
   .cta__text-box {
     margin-top: -10px;
-    padding: 1.5rem 0.1rem 4rem 0.1rem;
+    padding: 1.5rem 0.1rem 4.5rem 0.1rem;
+    width: 90%;
   }
 
   .cta__text {
